# fn-log

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_vs.bat  check_coverage.sh  check_tests.sh  distribute.sh  fn_log.h.only  make.sh  merge_header.sh  release_version.sh
.github/workflows/: cmake.yml  codeql-analysis.yml  dist.yml
include/fn-log/: GIT_VERSION  README.md  VERSION  default_log.yaml  fn_log.h
src/include/: fn_channel.h  fn_core.h  fn_data.h  fn_file.h  fn_fmt.h  fn_load.h  fn_log.h  fn_macro.h  fn_mem.h  fn_out_empty_device.h  fn_out_file_device.h  fn_out_screen_device.h  fn_out_udp_device.h  fn_out_virtual_device.h  fn_parse.h  fn_stream.h
tests/: benchmark.cpp  benchmark_device_30.cpp  benchmark_fast.cpp  benchmark_filter_empty.cpp  benchmark_multi-thread.cpp  benchmark_multi-thread_dynamic_inc.cpp  benchmark_multi-thread_hotupdate.cpp  benchmark_multi-thread_nofile.cpp  benchmark_multi-thread_sync.cpp  benchmark_multi-thread_sync_nofile.cpp  benchmark_multi-thread_travis_shm.cpp  benchmark_multi-thread_use.cpp  benchmark_multi-thread_write_file.cpp  benchmark_normal.cpp  benchmark_serialize_integer.cpp  benchmark_sync_bat_write.cpp  benchmark_udp.cpp  benchmark_virtual_device.cpp  buffer_correct_test.cpp  buffer_test.cpp  fast_start_debug_test.cpp  fast_start_default_test.cpp  fast_start_simple_test.cpp  filter_test.cpp  load_config_test.cpp  log4z_test.cpp  multi-thread_env_multi_reboot_test.cpp  multi-thread_env_single_reboot_test.cpp  multi-thread_reboot_test.cpp  multi-thread_reboot_test2.cpp  multi-thread_test.cpp  multi-thread_write_file_test.cpp  simple_test.cpp  stress_block_in.cpp  stress_multi-thread-env_concurrent_reboot.cpp  stress_multi-thread-env_main_reboot.cpp  stress_test.cpp  stress_udp_test.cpp  test_bitlist.cpp  test_buffer.cpp  (+24 more)
